--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Контейнер для фрагментов. Профиль теперь открывается как отдельная Activity -->
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
