--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="primary_dark">#303F9F</color>
     <color name="accent">#FF4081</color>
     <color name="yellow">#ffff00</color>
+    <color name="leaderboard_header">#4FC1FA</color>
+    <color name="leaderboard_background">#D9D9D9</color>
+    <color name="leaderboard_text">#000000</color>
 </resources>
