--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="leaderboard_header">#4FC1FA</color>
     <color name="leaderboard_background">#D9D9D9</color>
     <color name="leaderboard_text">#000000</color>
+    <color name="lemon">#fffc79</color>
+    <color name="red">#ff0000</color>
 </resources>
