--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -32,6 +32,7 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
@@ -49,9 +50,9 @@
         <TextView
             android:id="@+id/total_points"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:padding="5dp"
             android:text="Общее количество очков"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -60,46 +61,33 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <Button
+        android:id="@+id/leaderboardTeams"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
+        android:layout_below="@+id/cardView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="61dp"
-        android:layout_marginRight="45dp"
-        app:cardBackgroundColor="@color/purple_200"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp">
+        android:layout_marginStart="46dp"
+        android:gravity="center"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="58dp"
+        android:backgroundTint="@color/blue"
+        android:text="Таблица лидеров команд" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Таблица лидеров команд"
-            android:layout_gravity="center"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-
-    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvParticipantsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView"
+        android:layout_below="@+id/leaderboardTeams"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="11dp"
         android:text="Список участников:"
         android:textColor="#666"
-        android:textStyle="bold"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/users"
@@ -107,13 +95,13 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation"
         android:layout_below="@+id/tvParticipantsTitle"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="60dp"
         android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvParticipantsTitle"
-        tools:listitem="@layout/item_participant"/>
+        tools:listitem="@layout/item_participant" />
 
     <Button
         android:id="@+id/kick_group"
