--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -75,12 +75,37 @@
         android:backgroundTint="@color/blue"
         android:text="Таблица лидеров команд" />
 
+    <!-- Секция мероприятий -->
+    <TextView
+        android:id="@+id/tvEventsTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/leaderboardTeams"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="11dp"
+        android:text="Мероприятия:"
+        android:textColor="#666"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <ListView
+        android:id="@+id/events_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvEventsTitle"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"/>
 
     <TextView
         android:id="@+id/tvParticipantsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/leaderboardTeams"
+        android:layout_below="@+id/events_list"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="11dp"
@@ -123,6 +148,17 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-
+    <ListView
+        android:id="@+id/invites_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/leaderboardTeams"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
