--- a/app/src/main/res/layout/dialog_invite.xml
+++ b/app/src/main/res/layout/dialog_invite.xml
@@ -30,10 +30,10 @@
 
     <Button
         android:id="@+id/btnInvite"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Пригласить"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#6200EE"
         android:textColor="#FFF"/>
 </LinearLayout>
