--- a/app/src/main/res/layout-land/activity_create_group.xml
+++ b/app/src/main/res/layout-land/activity_create_group.xml
@@ -51,6 +51,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
+        style="@style/BottomNavStyle"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" />
