--- a/app/src/main/res/layout-land/activity_group.xml
+++ b/app/src/main/res/layout-land/activity_group.xml
@@ -78,18 +78,19 @@
 
     <Button
         android:id="@+id/kick_group"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigation"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="6dp"
-        android:backgroundTint="@color/red"
         android:text="Покинуть группу" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
+        style="@style/BottomNavStyle"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" >
@@ -99,6 +100,7 @@
     <TextView
         android:id="@+id/tvParticipantsTitle"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:layout_below="@+id/cardView2"
         android:layout_marginStart="15dp"
