--- a/app/src/main/res/layout-land/activity_leaderboard.xml
+++ b/app/src/main/res/layout-land/activity_leaderboard.xml
@@ -2,12 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/leaderboard_background">
+    android:layout_height="match_parent">
+
+
 
     <!-- Главная шапка (заголовок) -->
     <TextView
         android:id="@+id/main_header"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -73,9 +75,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
+        style="@style/BottomNavStyle"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
