--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -73,6 +73,7 @@
             <Button
                 android:id="@+id/btnProfileSettings"
                 android:layout_width="match_parent"
+                android:backgroundTint="?attr/colorButtonNormal"
                 android:layout_height="wrap_content"
                 android:text="Настройки профиля"
                 android:layout_marginTop="16dp" />
@@ -80,15 +81,24 @@
             <Button
                 android:id="@+id/logoutBtn"
                 android:layout_width="match_parent"
+                android:backgroundTint="?attr/colorButtonNormal"
                 android:layout_height="wrap_content"
                 android:text="Выйти из аккаунта"
                 android:drawableLeft="@android:drawable/ic_lock_power_off"
+                android:layout_marginTop="8dp" />
+            <Button
+                android:id="@+id/ThemeButton"
+                android:layout_width="match_parent"
+                android:backgroundTint="?attr/colorButtonNormal"
+                android:layout_height="wrap_content"
+                android:text="Сменить тему"
                 android:layout_marginTop="8dp" />
         </LinearLayout>
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
