--- a/app/src/main/res/layout/dialog_team_leaders.xml
+++ b/app/src/main/res/layout/dialog_team_leaders.xml
@@ -24,9 +24,9 @@
 
     <Button
         android:id="@+id/btnClose"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Закрыть"
-        android:backgroundTint="#6200EE"
         android:textColor="#FFF"/>
 </LinearLayout>
