--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,11 @@
     <color name="leaderboard_text">#000000</color>
     <color name="lemon">#fffc79</color>
     <color name="red">#ff0000</color>
+    <color name="gray">#808080</color>
+    <color name="bottom_nav_color_1">#4fc1fa</color>
+    <color name="bottom_nav_color_2">#FF000000</color>
+    <color name="bottom_nav_color_3">#acacac</color>
+    <color name="bottom_nav_color_4">#953eff</color>
+    <color name="bottom_nav_color_5">#ff8a60</color>
+
 </resources>
