--- a/app/src/main/res/layout/activity_riddle.xml
+++ b/app/src/main/res/layout/activity_riddle.xml
@@ -30,17 +30,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation"
-        android:visibility="gone"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        android:visibility="gone"/>
 
-    <!-- Старая разметка для одной загадки пока скрыта -->
+    <!-- Старая разметка для одной загадки теперь видима по умолчанию -->
     <LinearLayout
         android:id="@+id/singleRiddleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible"
+        android:background="@color/white"
+        android:padding="24dp">
 
         <TextView
             android:id="@+id/tvRiddleNumber"
@@ -66,7 +68,9 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:text="Текст вопроса"
-            android:textSize="18sp" />
+            android:textSize="22sp"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/Widget.MaterialComponents.Button"
