--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -232,5 +232,16 @@
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"/>
 
+        <Button
+            android:id="@+id/btnUnregister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Отменить регистрацию"
+            android:textSize="16sp"
+            android:padding="12dp"
+            android:background="@android:color/holo_red_dark"
+            android:textColor="@android:color/white"
+            android:visibility="gone"/>
+
     </LinearLayout>
 </ScrollView> 
