Добавлены стили на все окна

--- a/app/src/main/res/layout-land/activity_create_group.xml
+++ b/app/src/main/res/layout-land/activity_create_group.xml
@@ -28,6 +28,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCreateGroup"
+        android:backgroundTint="?attr/colorButtonNormal"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,6 +40,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnOfflineGroup"
+        android:backgroundTint="?attr/colorButtonNormal"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,6 +52,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
