--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -32,10 +32,10 @@
 
     <Button
         android:id="@+id/btnCreateTeam"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Создать команду"
-        android:backgroundTint="@color/blue"
         android:textColor="@android:color/white"
         android:layout_marginTop="16dp"/>
 
