--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -74,6 +74,7 @@
                 android:id="@+id/btnProfileSettings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="?attr/colorButtonNormal"
                 android:text="Настройки профиля"
                 android:layout_marginTop="16dp" />
 
@@ -81,8 +82,16 @@
                 android:id="@+id/logoutBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="?attr/colorButtonNormal"
                 android:text="Выйти из аккаунта"
                 android:drawableLeft="@android:drawable/ic_lock_power_off"
+                android:layout_marginTop="8dp" />
+            <Button
+                android:id="@+id/ThemeButton"
+                android:layout_width="match_parent"
+                android:backgroundTint="?attr/colorButtonNormal"
+                android:layout_height="wrap_content"
+                android:text="Сменить тему"
                 android:layout_marginTop="8dp" />
         </LinearLayout>
     </ScrollView>
@@ -90,6 +99,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
+        style="@style/BottomNavStyle"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" />
