--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,6 +35,7 @@
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
+        android:backgroundTint="?attr/colorButtonNormal"
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
