--- a/app/src/main/res/layout-land/activity_group.xml
+++ b/app/src/main/res/layout-land/activity_group.xml
@@ -34,6 +34,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
@@ -90,6 +91,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
+        style="@style/BottomNavStyle"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" >
