--- a/app/src/main/res/layout-land/activity_leaderboard.xml
+++ b/app/src/main/res/layout-land/activity_leaderboard.xml
@@ -8,6 +8,7 @@
     <!-- Главная шапка (заголовок) -->
     <TextView
         android:id="@+id/main_header"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -72,6 +73,7 @@
     <!-- Нижняя панель навигации -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
