--- a/app/src/main/res/layout-land/activity_profile.xml
+++ b/app/src/main/res/layout-land/activity_profile.xml
@@ -84,6 +84,13 @@
                 android:text="Выйти из аккаунта"
                 android:drawableLeft="@android:drawable/ic_lock_power_off"
                 android:layout_marginTop="8dp" />
+            <Button
+                android:id="@+id/ThemeButton"
+                android:layout_width="match_parent"
+                android:backgroundTint="?attr/colorButtonNormal"
+                android:layout_height="wrap_content"
+                android:text="Сменить тему"
+                android:layout_marginTop="8dp" />
         </LinearLayout>
     </ScrollView>
 
