--- a/app/src/main/res/layout-land/activity_riddle.xml
+++ b/app/src/main/res/layout-land/activity_riddle.xml
@@ -68,6 +68,7 @@
 
             <Button
                 android:id="@+id/checkBtn"
+                android:backgroundTint="?attr/colorButtonNormal"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -78,6 +79,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
