--- a/app/src/main/res/layout/activity_event_preview.xml
+++ b/app/src/main/res/layout/activity_event_preview.xml
@@ -88,6 +88,7 @@
 
         <Button
             android:id="@+id/btnSelectThemeImage"
+            android:backgroundTint="?attr/colorButtonNormal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Выбрать фон мероприятия"
@@ -95,6 +96,7 @@
 
         <Button
             android:id="@+id/btnConfirmAndCreate"
+            android:backgroundTint="?attr/colorButtonNormal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Подтвердить и создать"
