--- a/app/src/main/res/layout/activity_map_picker.xml
+++ b/app/src/main/res/layout/activity_map_picker.xml
@@ -17,6 +17,7 @@
 
     <Button
         android:id="@+id/confirm_button"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
