--- a/app/src/main/res/layout/activity_riddle.xml
+++ b/app/src/main/res/layout/activity_riddle.xml
@@ -90,6 +90,7 @@
             android:visibility="invisible" />
 
         <Button
+            android:backgroundTint="?attr/colorButtonNormal"
             android:id="@+id/checkBtn"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -100,6 +101,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/BottomNavStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
