--- a/app/src/main/res/layout/dialog_invite_users.xml
+++ b/app/src/main/res/layout/dialog_invite_users.xml
@@ -40,6 +40,7 @@
         android:gravity="end">
 
         <Button
+            android:backgroundTint="?attr/colorButtonNormal"
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
