--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -61,12 +61,12 @@
 
         <Button
             android:id="@+id/btn_create_group"
+            android:backgroundTint="?attr/colorButtonNormal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Создать группу"
             android:textSize="16sp"
             android:padding="12dp"
-            android:background="@drawable/button_background"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
