--- a/app/src/main/res/layout/item_riddle_input.xml
+++ b/app/src/main/res/layout/item_riddle_input.xml
@@ -67,6 +67,7 @@
 
     <Button
         android:id="@+id/btnOpenMap"
+        android:backgroundTint="?attr/colorButtonNormal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Выбрать на карте"
