--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,10 +11,17 @@
     <color name="primary">#3F51B5</color>
     <color name="primary_dark">#303F9F</color>
     <color name="accent">#FF4081</color>
-    <color name="yellow">#ffff00</color>
+    <color name="yellow">#fccf31</color>
     <color name="leaderboard_header">#4FC1FA</color>
     <color name="leaderboard_background">#D9D9D9</color>
     <color name="leaderboard_text">#000000</color>
     <color name="lemon">#fffc79</color>
     <color name="red">#ff0000</color>
+    <color name="gray">#808080</color>
+    <color name="bottom_nav_color_1">#4fc1fa</color>
+    <color name="bottom_nav_color_2">#FF000000</color>
+    <color name="bottom_nav_color_3">#acacac</color>
+    <color name="bottom_nav_color_4">#953eff</color>
+    <color name="bottom_nav_color_5">#ff8a60</color>
+
 </resources>
