--- a/app/src/main/res/layout/activity_riddle.xml
+++ b/app/src/main/res/layout/activity_riddle.xml
@@ -25,6 +25,18 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"/>
 
+    <TextView
+        android:id="@+id/tvNextEventTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/timerTextView"
+        android:layout_centerHorizontal="true"
+        android:text="До следующего мероприятия: 00:00:00"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/riddlesRecyclerView"
         android:layout_width="match_parent"
